Removed flex on desktop version and corrected menu elements from "breaking" because of too narrow screen size

--- a/es/main.css
+++ b/es/main.css
@@ -454,9 +454,9 @@ ul.languages__sub-menu {
 .languages__sub-menu li {
     padding: 0!important;
 }
-@media only screen and (min-width:600px) and (max-width:1024px) {
+@media only screen and (min-width:850px) and (max-width:1024px) {
     .menu a {
-    font-size: 1.5rem!important;
+    font-size: 1.25rem!important;
 }
 }@media only screen and (max-width:1024px) {
     .menu {
@@ -572,10 +572,6 @@ to {
 }
 .header__service_type {
     color: #268cf5;
-}
-.flags{
-    display: flex;
-    justify-content: flex-start;
 }
 ul.flags {
     padding: 0;
@@ -2133,9 +2129,10 @@ nav {
 }
 }@media only screen and (min-width:600px) and (max-width:1024px) {
     footer, nav, section .layout__wrapper {
-    padding: 40px!important;
+        padding: 40px!important;
+    }
 }
-}.menu {
+.menu {
     display: flex;
     justify-content: space-between;
     position: relative;
